--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,26 +1,25 @@
 .container.signin
-  .col-md-2.col-md-offset-5
+  .col-md-4.col-md-offset-4
 
     = form_for resource, as: resource_name, url: registration_path(resource_name) do |f|
       = devise_error_messages!
 
       %h3 Your Account Settings
 
-      .field= f.text_field :name, autofocus: true, placeholder: :name
-      .field= f.email_field :email, placeholder: :email
-      .field= f.text_field :phone, placeholder: :phone
+      = f.text_field :name, autofocus: true, placeholder: :name, class: 'form-control'
+      = f.email_field :email, placeholder: :email, class: 'form-control'
+      = f.text_field :phone, placeholder: :phone, class: 'form-control'
 
       %h3 Password settings
       - if devise_mapping.confirmable? && resource.pending_reconfirmation?
         %div= "Currently waiting confirmation for: #{resource.unconfirmed_email}"
-      .field= f.password_field :password, autocomplete: 'off', placeholder: :password
-      .field= f.password_field :password_confirmation, autocomplete: 'off', placeholder: :password_confirmation
-      .field= f.password_field :current_password, autocomplete: 'off', placeholder: :current_password
+      = f.password_field :password, autocomplete: 'off', placeholder: :password, class: 'form-control'
+      = f.password_field :password_confirmation, autocomplete: 'off', placeholder: :password_confirmation, class: 'form-control'
       %p
-      = f.submit 'Update', class: 'btn btn-lg btn-primary btn-block'
+      = f.submit 'Update', class: 'btn btn-primary btn-block'
 
     %div
       %h3 Cancel my account
-      = button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete
+      = button_to 'Cancel my account', registration_path(resource_name), data: { confirm: 'Are you sure?' }, method: :delete, class: 'btn btn-default'
       %p
       .action= link_to 'Back', :back
