--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
 .container.signin
-  .col-md-2.col-md-offset-5
+  .col-md-4.col-md-offset-4
 
     = form_for resource, as: resource_name, url: registration_path(resource_name) do |f|
       = devise_error_messages!
@@ -7,16 +7,19 @@
       %h3{ :class => 'form-signin-heading' }Please sign up
 
       = f.text_field :name, autofocus: true, placeholder: :name, class: 'form-control'
-
+      %br
       = f.email_field :email, placeholder: :email, class: 'form-control'
-
+      %br
       = f.text_field :phone, placeholder: :phone, class: 'form-control'
-
+      %br
       = f.password_field :password, autocomplete: 'off', placeholder: :password, class: 'form-control'
-
+      %br
       = f.password_field :password_confirmation, autocomplete: 'off', placeholder: :password_confirmation, class: 'form-control'
 
+      -# temporarily
+      = f.hidden_field :role, value: 'user'
+
       %p
-      .actions= f.submit 'Sign up'
+      .actions= f.submit 'Sign up', class: 'btn btn-primary'
 
     = link_to 'Sign in', new_session_path(resource_name)
