--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,8 +19,9 @@
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
             - if current_user.user?
+              %li= link_to 'My books', root_path
               %li= link_to 'All books'
-              %li= link_to 'My books'
+              %li= link_to 'Users', users_path
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{'aria-expanded' => 'false', 'data-toggle' => 'dropdown', href: '', role: 'button'}
