--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,8 +20,9 @@
           %ul.nav.navbar-nav
             - if current_user.user?
               %li= link_to 'My books', root_path
-              %li= link_to 'All books'
+              %li= link_to 'All books', books_path
               %li= link_to 'Users', users_path
+            %li= link_to 'Add book'
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{'aria-expanded' => 'false', 'data-toggle' => 'dropdown', href: '', role: 'button'}
