--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,11 +18,11 @@
           -#%img{ src: '/assets/filename.png', style: 'height:50px' }
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
-            - if current_user.user?
-              %li= link_to 'My books', root_path
-              %li= link_to 'All books', books_path
-              %li= link_to 'Users', users_path
-            %li= link_to 'Add book'
+            %li= link_to 'My books', root_path
+            %li= link_to 'All books', books_path
+            - if current_user.moderator?
+              %li= link_to 'Add book', new_book_path
+            %li= link_to 'Users', users_path
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{'aria-expanded' => 'false', 'data-toggle' => 'dropdown', href: '', role: 'button'}
