--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,10 +18,10 @@
           -#%img{ src: '/assets/filename.png', style: 'height:50px' }
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
-            %li= link_to 'My books', root_path
             %li= link_to 'All books', books_path
             - if current_user.moderator?
               %li= link_to 'Add book', new_book_path
+              %li= link_to 'Add author', new_author_path
             %li= link_to 'Users', users_path
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
@@ -30,10 +30,9 @@
                 %span.caret
               %ul.dropdown-menu{role: 'menu'}
                 %li
-                  - if current_user.user?
-                    %a=link_to 'Settings', edit_user_registration_path
-                  - else
-                    %a=link_to 'Change password', edit_user_registration_path
+                  %a= link_to 'My profile', user_path(current_user)
+                %li
+                  %a=link_to 'Settings', edit_user_registration_path
                 -#%li
                 -#  - if current_user.user?
                 -#    %a=link_to 'Write to admin'
