--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,3 +1,8 @@
 - @books.each do |book|
+  Title:
   = link_to book.title, book_path(book.id)
+  Author:
+  = link_to book.author.first_name + book.author.last_name
+  Language:
+  = link_to book.language.name
   %br
