--- a/app/views/moderators/show.html.haml
+++ b/app/views/moderators/show.html.haml
@@ -2,5 +2,12 @@
 %br
 %br
 - @books.each do |book|
+  Title:
   = link_to book.title, book_path(book.id)
+  Author:
+  = link_to book.author.first_name + book.author.last_name
+  Language:
+  = link_to book.language.name
+  ______
+  = link_to 'Edit', edit_book_path(book.id)
   %br
