--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -12,6 +12,8 @@
       %br
       = f.text_field :phone, placeholder: :phone, class: 'form-control'
       %br
+      = f.file_field :avatar
+      %br
       = f.password_field :password, autocomplete: 'off', placeholder: :password, class: 'form-control'
       %br
       = f.password_field :password_confirmation, autocomplete: 'off', placeholder: :password_confirmation, class: 'form-control'
