--- a/app/views/moderators/show.html.haml
+++ b/app/views/moderators/show.html.haml
@@ -1,13 +1,33 @@
-= @user.name
-%br
-%br
-- @books.each do |book|
-  Title:
-  = link_to book.title, book_path(book.id)
-  Author:
-  = link_to book.author.first_name + book.author.last_name
-  Language:
-  = link_to book.language.name
-  ______
-  = link_to 'Edit', edit_book_path(book.id)
-  %br
+.container
+  .row
+    .col-md-12
+
+      = @user.name
+      %br
+      %br
+      %table{ class: 'table table-striped table-bordred' }
+        %thead
+          %tr
+            %th Title
+            %th Author
+            %th Cover
+            %th Language
+            %th Number of instances
+            %th Edit
+            %th Delete
+        %tbody
+          - @books.each do |book|
+            %tr
+              %td= link_to book.title, book_path(book.id)
+              %td= link_to book.author.first_name + book.author.last_name
+              %td
+                .img-rounded= image_tag book.cover.url(:small)
+              %td= link_to book.language.name
+              %td= 1
+              %td
+                = link_to edit_book_path(book.id) do
+                  .btn.btn-sm.btn-warning
+                    %i.fa.fa-edit
+              %td
+                .btn.btn-sm.btn-danger
+                  %i.fa.fa-trash
