--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -39,3 +39,4 @@
                 %li.divider
                 %li= link_to 'Sign out', destroy_user_session_path, method: :delete
   = yield
+  #modals.modal.fade
