--- a/app/views/moderators/show.html.haml
+++ b/app/views/moderators/show.html.haml
@@ -19,13 +19,13 @@
           - @books.each do |book|
             %tr
               %td= link_to book.title, book_path(book.id)
-              %td= link_to book.author.first_name + book.author.last_name
+              %td= link_to book.author.first_name + book.author.last_name, author_path(book.author.id)
               %td
                 .img-rounded= image_tag book.cover.url(:small)
-              %td= link_to book.language.name
+              %td= book.language.name
               %td= 1
               %td
-                = link_to edit_book_path(book.id) do
+                = link_to edit_book_path(book.id), remote: true do
                   .btn.btn-sm.btn-warning
                     %i.fa.fa-edit
               %td
