add list of genres (not working)

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -12,10 +12,19 @@
  *= require _bootstrap
  *= require _bootstrap-sprockets
  *= require font-awesome
- *= require_tree .
  *= require_self
+ *= require_tree .
  */
 
 
+.list-genre-item-primary
+  color: rgb(255, 255, 255)
+  background-color: rgb(66, 139, 202)
 
+.well .list-genre
+  margin-bottom: 0px
+
+.list-genre-item.active, .list-genre-item.active:hover, .list-genre-item.active:focus
+  background-color: #2AC3B5
+  border-color: #2AC3B5
 
