--- a/app/views/books/modals/_edit.html.haml
+++ b/app/views/books/modals/_edit.html.haml
@@ -1,7 +1,7 @@
 .modal-dialog
   .modal-content
     .modal-header
-      .modal-title-subj
+      .modal-title-book
         %div{style: 'float:left'} Editing
         %div{style: 'float:left; color: #f0ad4e'}= ' "' + @book.title + '" '
         %div{style: 'float:left'} by
