add genre-list (not working js in modal)

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,15 +16,29 @@
  *= require_tree .
  */
 
+.state-icon
+  left: -5px
 
-.list-genre-item-primary
+.list-group-item-primary
   color: rgb(255, 255, 255)
   background-color: rgb(66, 139, 202)
 
-.well .list-genre
+.well .list-group
   margin-bottom: 0px
 
-.list-genre-item.active, .list-genre-item.active:hover, .list-genre-item.active:focus
+
+.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus
   background-color: #2AC3B5
   border-color: #2AC3B5
+
+
+
+
+
+
+
+
+
+
+
 
