--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -16,4 +16,41 @@
       Number of available copies:
       = '1'
 
+      %br
+      %br
+
+      .panel.panel-default
+        .panel-heading
+          %h3.panel-title Copies
+        %ul.list-group
+          - @copies.each do |copy|
+            %li.list-group-item
+            %div{ id: "dropdown-detail-#{copy.id}", class: 'row toggle', 'data-toggle' => "detail-#{copy.id}" }
+              .col-xs-10
+                = copy.isbn
+              .col-xs-2
+                %i.fa.fa-chevron-down.pull-right
+            %div{id: "detail-#{copy.id}"}
+              %hr
+              .container
+                .fluid-row
+                  Status now:
+                  - if !copy.available
+                    not
+                  available
+                  %br
+                  History
+                  %br
+                  - copy.book_copy_users.each do |cu|
+                    User:
+                    = cu.user.name
+                    Return date:
+                    = cu.return_date || 'not returned'
+                    %br
+
+
+
+
     .col-md-3
+
+  .row
