--- a/app/views/moderators/show.html.haml
+++ b/app/views/moderators/show.html.haml
@@ -24,7 +24,7 @@
               %td
                 .img-rounded= image_tag book.cover.url(:small)
               %td= book.language.name
-              %td= link_to '1'
+              %td= link_to '1', book_copies_path(book.id), remote: true
               %td
                 = link_to book_genres_path(book.id), remote: true do
                   .btn.btn-subj.btn-info
