--- a/app/views/books/modals/_genres.html.haml
+++ b/app/views/books/modals/_genres.html.haml
@@ -1,7 +1,7 @@
 .modal-dialog
   .modal-content
     .modal-header
-      %button.close{'data-dismiss' => 'modals', :type => 'button'}
+      = link_to '', class: 'close', data: {dismiss: 'modals'}  do
         %span{'aria-hidden' => 'true'} ×
         %span.sr-only Close
       %h4.modal-title Genres
@@ -10,15 +10,9 @@
         %ul.list-group.checked-list-box
           - Genre.all.each do |genre|
             - if @genres.include?(genre)
-              = link_to do
+              = link_to book_remove_genre_path(genre_id: genre.id,book_id: @book.id), method: :put, remote: true, style: 'text-decoration: none;' do
                 %li.list-group-item{'data-checked' => 'true'}= genre.name
             -else
-              = link_to do
+              = link_to book_add_genre_path(genre_id: genre.id,book_id: @book.id), method: :put, remote: true, style: 'text-decoration: none;' do
                 %li.list-group-item= genre.name
-
-      -#.well{:style => "max-height: 300px;overflow: auto;"}
-      -#  %ul.list-group.checked-list-box
-      -#    %li.list-group-item Leerla hasta entenderla
-      -#    %li.list-group-item{"data-checked" => "true"} Leer la ubicación del usuario
-      -#    %li.list-group-item Investigar hasta entender la intención
     .modal-footer
