--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -48,6 +48,8 @@
                       = cu.return_date || 'not returned'
                       %br
 
+                    = link_to 'Delete',  book_copy_delete_path(copy.id), remote: true
+
 
 
 
