--- a/app/views/moderators/show.html.haml
+++ b/app/views/moderators/show.html.haml
@@ -1,9 +1,8 @@
 .container
   .row
     .col-md-12
-
-      = @user.name
-      %br
+      %center
+        %h1 Your books
       %br
       %table{ class: 'table table-striped table-bordred' }
         %thead
