--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -57,7 +57,8 @@
         - else
           =link_to '#' do
             .btn.btn-danger
-              ='Return it'
+              = link_to 'Return it'
+
 
     .col-md-3
 
