--- a/app/views/books/modals/_genres.html.haml
+++ b/app/views/books/modals/_genres.html.haml
@@ -10,9 +10,9 @@
         %ul.list-group.checked-list-box
           - Genre.all.each do |genre|
             - if @genres.include?(genre)
-              = link_to book_remove_genre_path(genre_id: genre.id,book_id: @book.id), method: :put, remote: true, style: 'text-decoration: none;' do
+              = link_to book_add_remove_genre_path(genre_id: genre.id,book_id: @book.id), method: :put, remote: true, style: 'text-decoration: none;' do
                 %li.list-group-item{'data-checked' => 'true'}= genre.name
             -else
-              = link_to book_add_genre_path(genre_id: genre.id, book_id: @book.id), method: :put, remote: true, style: 'text-decoration: none;' do
+              = link_to book_add_remove_genre_path(genre_id: genre.id, book_id: @book.id), method: :put, remote: true, style: 'text-decoration: none;' do
                 %li.list-group-item= genre.name
     .modal-footer
