--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
             - if current_user.moderator?
               %li= link_to 'Add book', new_book_path
               %li= link_to 'Add author', new_author_path
-            %li= link_to 'Users', users_path
+            %li= link_to 'Debtors', users_path
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{'aria-expanded' => 'false', 'data-toggle' => 'dropdown', href: '', role: 'button'}
