--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,3 +1,30 @@
-- @users.each do |user|
-  = link_to user.name, user_path(user.id)
-  %br
+.container
+  .row
+    .col-md-12
+      %center
+        %h1 Debtors
+      %br
+      %table{ class: 'table table-striped table-bordred' }
+        %thead
+          %tr
+            %th Book
+            %th ISBN
+            %th User
+            %th Last date
+            %th Days ago
+            %th Contact
+        %tbody
+          - @book_copies.each do |bc|
+            %tr
+              %td= bc.book.title
+              %td= bc.isbn
+              - bcu = BookCopyUser.where(book_copy_id: bc.id).last
+              %td= bcu.user.name
+              %td= bcu.last_date
+              %td= (Date.today - bcu.last_date).to_i
+              %td
+                = link_to '#' do
+                  .btn.btn-sm.btn-success
+                    %i.fa.fa-paper-plane-o
+
+      %br
