--- a/app/views/moderators/show.html.haml
+++ b/app/views/moderators/show.html.haml
@@ -4,13 +4,13 @@
       %center
         %h1 Your books
       %br
-      %table{ class: 'table table-striped table-bordred' }
+      %table{ class: 'table table-striped table-bordred sortable' }
         %thead
           %tr
             %th Title
             %th Author
-            %th Cover
-            %th Language
+            %th{'data-defaultsort'=>'disabled'} Cover
+            %th{'data-defaultsort'=>'disabled'} Language
             %th Number of instances
             %th Genres
             %th Edit
