--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,11 @@
           -#%img{ src: '/assets/filename.png', style: 'height:50px' }
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
+            - if current_user.is_debtor?
+              %li
+                =link_to user_path(current_user) do
+                  %div{style: 'color:red;'}
+                    %b YOU ARE DEBTOR!!!
             %li= link_to 'All books', books_path
             - if current_user.moderator?
               %li= link_to 'Add book', new_book_path
