--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -25,10 +25,22 @@
       %br
       - @languages.each do |l|
         %p= link_to l.name, language_path(l.id)
-      %h3 Genres
-      %br
-      - @genres.each do |genre|
-        %p= link_to genre.name
 
+    .row
+      %h3 Search
+      = form_tag books_path, class: 'form-inline', method: 'get' do
+        .input-group
+          = text_field_tag :title, params[:title], placeholder: 'Title', class: 'form-control'
+          = text_field_tag :author, params[:ssuthor], placeholder: 'Author', class: 'form-control'
+          %br
+          = submit_tag 'Search', class: 'btn'
 
-
+    .row
+      %h3 Filter
+      = form_tag books_path, class: 'form-inline', method: 'get' do
+        .input-group
+          - @genres.each do |genre|
+            = check_box_tag(name = genre.name, value = genre.id, checked = false, options = {})
+            = genre.name
+            %br
+          = submit_tag 'Filter', class: 'btn'
