--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -31,7 +31,7 @@
       = form_tag books_path, class: 'form-inline', method: 'get' do
         .input-group
           = text_field_tag :title, params[:title], placeholder: 'Title', class: 'form-control'
-          = text_field_tag :author, params[:ssuthor], placeholder: 'Author', class: 'form-control'
+          = text_field_tag :author, params[:author], placeholder: 'Author', class: 'form-control'
           %br
           = submit_tag 'Search', class: 'btn'
 
