--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,7 +7,7 @@
             Hello,
           = @user.name
       %center
-        %h1 Books that you have
+        %h1 Books that you have or had previously
       %br
       %table{ class: 'table table-striped table-bordred sortable' }
         %thead
@@ -17,11 +17,22 @@
             %th{'data-defaultsort'=>'disabled'} Cover
             %th ISBN
             %th Last date
+            %th Return date
         %tbody
-          - @bookcopiesnow.each do |copyuser|
+          - @bookcopiesnow.sort_by(&:last_date).each do |copyuser|
             %tr{style: current_user.must_return_book?(copyuser.book_copy.book) ? 'color:red;' : 'color:green'}
-              %td= copyuser.book_copy.book.title
-              %td= copyuser.book_copy.book.author.last_name
+              %td= link_to copyuser.book_copy.book.title, copyuser.book_copy.book
+              %td= copyuser.book_copy.book.author.first_name + ' ' + copyuser.book_copy.book.author.last_name
               %td
               %td= copyuser.book_copy.isbn
               %td= copyuser.last_date
+              %td= '-'
+          - @bookcopiesnotnow.sort_by(&:last_date).each do |copyuser|
+            %tr
+              %td= link_to copyuser.book_copy.book.title, copyuser.book_copy.book
+              %td= copyuser.book_copy.book.author.first_name + ' ' + copyuser.book_copy.book.author.last_name
+              %td
+              %td= copyuser.book_copy.isbn
+              %td= copyuser.last_date
+              %td= copyuser.return_date
+
