--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -3,6 +3,13 @@
     .jumbotron{style: 'padding:10%;margin:0;'}
       %h1 MyLibrary
 
+      = form_tag do
+        = text_field_tag 'search', nil, placeholder: 'Search', autocomplete: :off
+
+
+
+
+
     .row
       - @books.each do |book|
         .col-xs-6.col-lg-4
@@ -65,4 +72,8 @@
 :javascript
   $("#checkAll").click(function () {
       $(".check").prop('checked', $(this).prop('checked'));
+  });
+
+  $('#search').bind('railsAutocomplete.select', function(event, data){
+  $('#search-form').submit()
   });
