--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,6 +28,11 @@
               %li= link_to 'Add book', new_book_path
               %li= link_to 'Add author', new_author_path
               %li= link_to 'Debtors', users_path
+            %li
+              .navbar-form
+                = form_tag do
+                  .input-group
+                    = text_field_tag 'search', nil, placeholder: 'Search', autocomplete: :off, class: 'form-control'
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{'aria-expanded' => 'false', 'data-toggle' => 'dropdown', href: '', role: 'button'}
