--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     %nav.navbar.navbar-default
       .container
         .navbar-header
-          %img{ src: 'assets/library-icon.png', style: 'height:50px;margin-left:20px;' }
+          %img{ src: '/assets/library-icon.png', style: 'height:50px;margin-left:20px;' }
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
             - if current_user.is_debtor?
@@ -38,9 +38,6 @@
                   %a= link_to 'My profile', user_path(current_user)
                 %li
                   %a=link_to 'Settings', edit_user_registration_path
-                -#%li
-                -#  - if current_user.user?
-                -#    %a=link_to 'Write to admin'
                 %li.divider
                 %li= link_to 'Sign out', destroy_user_session_path, method: :delete
   = yield
