--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,21 +13,21 @@
           %img{ src: '/assets/library-icon.png', style: 'height:50px;margin-left:20px;' }
         .navbar-collapse.collapse
           %ul.nav.navbar-nav
-            - if current_user.is_debtor?
+            - if current_user.debtor?
               %li
                 =link_to user_path(current_user) do
                   %div{style: 'color:red;'}
                     %b YOU ARE DEBTOR!!!
             %li= link_to 'All books', books_path
-            - if current_user.moderator?
-              %li= link_to 'Add book', new_book_path
-              %li= link_to 'Add author', new_author_path
-              %li= link_to 'Debtors', users_path
             %li
               .navbar-form
                 = form_tag do
                   .input-group{style: 'width:400px;'}
                     = text_field_tag 'search', nil, placeholder: 'Search book or author', autocomplete: :off, class: 'form-control'
+            - if current_user.moderator?
+              %li= link_to 'Add book', new_book_path
+              %li= link_to 'Add author', new_author_path
+              %li= link_to 'Debtors', users_path
           %ul.nav.navbar-nav.navbar-right
             %li.dropdown
               %a.dropdown-toggle{'aria-expanded' => 'false', 'data-toggle' => 'dropdown', href: '', role: 'button'}
